[tool.poetry]
name = "guessthenumerpython"
version = "0.1.0"
description = ""
authors = ["Jose Luis Mañon <joseluismanonrosario@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reflex = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
